<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EmptyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/name_app"
            android:textColor="@color/black"
            android:textSize="@dimen/name_app"
            android:layout_marginTop="@dimen/name_app_top"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/register_header_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/header"
            android:text="@string/register_header" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/email_top"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal">

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_height_edit_text"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/password_top"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_login"
            android:minHeight="@dimen/min_height_edit_text"
            android:textColorHint="@color/gray"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:passwordToggleEnabled="true"

        android:layout_marginTop="@dimen/password_top"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal">

        <EditText
            android:id="@+id/editTextTextPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:minHeight="@dimen/min_height_edit_text"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/password_top"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal">

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_repeat"
            android:minHeight="@dimen/min_height_edit_text"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textSize="@dimen/text_button"
            android:layout_marginTop="@dimen/button_top"
            android:layout_marginHorizontal="@dimen/edit_text_horizontal"
            android:text="@string/register" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/alternative_action_top"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="@dimen/text_alternative_action"
            android:text="@string/login" />
    </LinearLayout>
</LinearLayout>